--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     <body id="app">
         <header :class="{ dark: store.dark }">
             <div class="logo">
-                <h2>TSL</h2>
-                <p>v1.6.5</p>
+                <h2>CesiumList</h2>
+                <p>Alpha 0.1</p>
             </div>
             <nav class="nav">
                 <router-link class="nav__tab" to="/">
@@ -44,9 +44,6 @@
                 </router-link>
                 <router-link class="nav__tab" to="/leaderboard">
                     <span class="type-label-lg">Leaderboard</span>
-                </router-link>
-                <router-link class="nav__tab" to="/roulette">
-                    <span class="type-label-lg">Roulette</span>
                 </router-link>
                 <div class="nav__actions">
                     <button
@@ -65,7 +62,7 @@
                         class="nav__cta type-label-lg"
                         href="https://docs.google.com/forms/d/e/1FAIpQLSfnL07lut6MBPuPElD9Pv0AQ6RTlkhKsqWYMKnBMSpIcmQRkA/viewform"
                         target="_blank"
-                        >Submit Record</a
+                        >Отправить рекорд</a
                     >
                 </div>
             </nav>
