--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
                             alt=""
                         />
                     </button>
-                    <a class="nav__icon" href="https://discord.gg/MApKMWZazm">
+                    <a class="nav__icon" href="https://discord.gg/cJSePhcskx">
                         <img src="image/discord.svg" alt="Discord Logo" />
                     </a>
                     <a
                         class="nav__cta type-label-lg"
-                        href="https://docs.google.com/forms/d/e/1FAIpQLSfnL07lut6MBPuPElD9Pv0AQ6RTlkhKsqWYMKnBMSpIcmQRkA/viewform"
+                        href="https://docs.google.com/forms/d/e/1FAIpQLSc0Ef8TOwXxRoo5Dkg8HEaeZKWVpm4jTTIstx4pHavma6zAuw/viewform"
                         target="_blank"
                         >Отправить рекорд</a
                     >
