--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     <body id="app">
         <header :class="{ dark: store.dark }">
             <div class="logo">
-                <h2>CesiumList</h2>
-                <p>Alpha 0.4</p>
+                <h2>CesiumChallengeList</h2>
+                <p>Alpha 0.1</p>
             </div>
             <nav class="nav">
                 <router-link class="nav__tab" to="/">
